ast/src/snapshots/transmute_ast__parser__tests__access.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"forty . two ;\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "forty",
            IdentId(1) => "two",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:1; [0, 5],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:9; [8, 11],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 1:1; [0, 5],
                    },
                ),
                span: 1:1; [0, 5],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Access(
                    ExprId(0),
                    IdentRefId(1),
                ),
                span: 1:1; [0, 11],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(1),
                ),
                span: 1:1; [0, 13],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
