ast/src/snapshots/transmute_ast__parser__tests__access_precendence.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"-a.b;\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "a",
            IdentId(1) => "b",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:2; [1, 2],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:4; [3, 4],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 1:2; [1, 2],
                    },
                ),
                span: 1:2; [1, 2],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Access(
                    ExprId(0),
                    IdentRefId(1),
                ),
                span: 1:2; [1, 4],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Unary(
                    UnaryOperator {
                        kind: Minus,
                        span: 1:1; [0, 1],
                    },
                    ExprId(1),
                ),
                span: 1:1; [0, 4],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:1; [0, 5],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
