ast/src/snapshots/transmute_ast__parser__tests__annotations_on_fn.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "a1",
            IdentId(2) => "a2",
            IdentId(3) => "f",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:2; [1, 3],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:6; [5, 7],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Block(
                    [],
                ),
                span: 1:17; [16, 18],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: LetFn(
                    Identifier {
                        id: IdentId(3),
                        span: 1:13; [12, 13],
                    },
                    [
                        Annotation {
                            ident_ref_ids: [
                                IdentRefId(0),
                            ],
                            span: 1:1; [0, 3],
                        },
                        Annotation {
                            ident_ref_ids: [
                                IdentRefId(1),
                            ],
                            span: 1:5; [4, 7],
                        },
                    ],
                    [],
                    [],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(0),
                ),
                span: 1:9; [8, 18],
            },
        ],
        type_defs: [],
        root: StmtId(0),
    },
)
